# orchestra

./: .gitignore  LICENSE  README.md  friday-journal.md  index.html  journal-template.md  monday-journal.md  pyproject.toml  wednesday-journal.md
agent/: cli.py  config.py  loop.py  memory.py  permissions.py  prompts.py  skills.py  tasks.py  todo.py  tools.py  tui.py
blog/: fifa-blog.md  info.txt
